Sat Feb 19 19:23:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>

	* Link with libpthread when building with multithreading.

	* Added new printers:
		- Xerox WorkCentre PE114e (SF: #2853726)
		- Toshiba eSTUDIO180S (SF: #2853726)
		- Samsung ML-3471ND (SF Open Discussion forum)
		- Samsung CLP-310N (SF Open Discussion forum)

	* Updated translation files po/fr.po and po/pt.po.

	* Corrected typo in ppd/Makefile which prevented from building the
	translated PPDs.

	* Added missing build information from the Samsung ML-2240 to
	ppd/samsung.drv and ppd/Makefile.

	* Rebuilt all PPDs with ppdc of CUPS 1.4.5.

	* Added support for the following QPDL-3 printers (SF: #3046271):
		- Samsung ML-1660
		- Samsung ML-1910
		- Samsung ML-1915
		- Samsung ML-2525
		- Samsung ML-2525W
		- Samsung ML-2580
		- Samsung ML-2580N
		- Samsung SCX-4600
		- Samsung SCX-4623F
		- Samsung SCX-4623FW
		- Samsung SCX-5330N
		- Samsung SCX-5530FN

	* Samsung ML-3050, ML-3051, and ML-3051ND are also QPDL 3, corrected.

	* Allow QPDL Version 3 in the PPD files (SF: #3046271).

	* Switched to the more lightweight JBIG85 library instead of to
	the standard JBIG library. Thanks to Jindrich Makovicka for the
	patch.

	* Fixed memory leak in the pstoqpdl filter. Thanks to Jindrich
	Makovicka for the patch.

	* On the CLP-300, SpliX sometimes produces random pixels at the
	bottom of the page. The reason is that the page image is copied to
	a buffer rounded to a band height, which is then compressed and
	sent to the printer, but the added lines are not zeroed after
	copying. The fix simply calls memset() to clear these added
	pixels. Thanks to Jindrich Makovicka for the patch.

	* Use an array of two integers, instead of an array of single
	integers which is twice as big, for the offset selection code in
	algo0x11.cpp.  The resulting binary code should be the same, but
	this change makes more clear what is happening.
