@@ -1,3 +1,9 @@
+Mon Jun 27 12:52:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>
+
+	* Fixed double free in pstoqpdl filter, which happens when the
+	  color profile collection is missing files. Thanks to Leonardo Hamada
+	  for thr patch (Ubuntu bug #714259, SF: #3124844).
+
 Sat Feb 19 19:23:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>
 
 	* Link with libpthread when building with multithreading.
